--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,24 +1,26 @@
+<a href="#main" class="visuallyhidden" tabindex="1">Skip to main content</a>
+
 <div class="container">
 
-    <header class="header">
-     <h1 class="header--title">My Books</h1> <span>{{toggle-widget}}</span>
+    <header class="header" role="banner">
+         <h1 class="header--title">My Books</h1> <span>{{toggle-widget}}</span>
     </header>
 
     <nav class="navbar">
-        <ul class="navbar--list">
+        <ul class="navbar--list" role="navigation">
             <li class="navbar--item">
-                <a href="#">El Pooch</a>
+                <a href="#" tabindex="1">El Pooch</a>
             </li>
-            <li class="navbar--item">
+            <li class="navbar--item" tabindex="1">
                 <a href="#">The flight</a>
             </li>
-            <li class="navbar--item">
+            <li class="navbar--item" tabindex="1">
                 <a href="#">Top 10 Australian beaches</a>
             </li>
         </ul>
     </nav>
 
-    <div id="main" class="backdrop backdrop_smallOnly">
+    <div id="main" class="backdrop backdrop_smallOnly" role="main">
         <span></span>
         <div class="row">
 
@@ -27,52 +29,23 @@
                 <article class="article article_welcome clearfix">
                     <div class="article--body">
                         <h2 class="article--title">Welcome back!</h2>
-
                         <p>Have you read any new books?</p>
                     </div>
-
-
                     <footer class="article--footer">
-                        {{book-widget books=model}}
+                        {{book-widget books=model.books}}
                     </footer>
                 </article>
-
-                {{#each model as |book|}}
-                <article class="article article_imgLeft clearfix">
-
-                    <figure class="article--img">
-                        <img src="{{book.thumb}}" alt="{{ book.title }}" />
-                    </figure>
-
-                    <div class="article--body">
-                        <h2 class="article--title">{{ book.title }}</h2>
-                        <p>{{ book.author }}</p>
-                        <footer class="article--footer">
-                            <p><a href="#" class="link link_inlineBlock p_uppercase">Free sample</a><a href="#" class="link link_primary link_inlineBlock p_uppercase">Review</a></p>
-                        </footer>
-                    </div>
-
-                </article>
-                {{/each}}
+                <!-- Display stored books -->
+                {{book-item books=model.books class=true}}
 
             </section>
-            <!-- Column for hero image articles -->
+
             <section class="column">
-
-                <article class="article clearfix">
-                    <figure class="article--img">
-                        <img src="/assets/images/thumb-3.png" alt="" />
-                    </figure>
-                    <div class="article--body">
-                        <h2 class="article--title">Welcome back!</h2>
-                        <p>Have you read any new books?</p>
-                    </div>
-                    <footer class="article--footer">
-                        <p><a href="#" class="link link_inlineBlock p_uppercase">Free sample</a><a href="#" class="link link_primary link_inlineBlock p_uppercase">Review</a></p>
-                    </footer>
-                </article>
-
+                <!-- Display featured articles -->
+                {{featured-items featured=model.featured feature=true}}
             </section>
+
+
         </div>
 
     </div>
