--- a/app/templates/components/book-item.hbs
+++ b/app/templates/components/book-item.hbs
@@ -1,21 +1,17 @@
 {{#each books as |book|}}
 <article class="article {{if class 'article_imgLeft'}} clearfix">
-
+    <!-- image -->
     <figure class="article--img">
         <img src="{{book.thumb}}" alt="{{ book.title }}" />
     </figure>
+    <!-- body -->
     <div class="article--body">
         <h2 class="article--title">{{ book.title }}</h2>
-        <p>{{ book.author }}</p>
+        <p class="text--secondary">{{ book.author }}</p>
     </div>
-    {{#if feature}}
-    <footer class="article--footer">
-        <p><a href="#" class="link link_inlineBlock p_uppercase">Share</a><a href="#" class="link link_primary link_inlineBlock p_uppercase">Explore</a></p>
-    </footer>
-    {{else}}
+    <!-- footer -->
     <footer class="article--footer">
         <p><a href="#" class="link link_inlineBlock p_uppercase">Free sample</a><a href="#" class="link link_primary link_inlineBlock p_uppercase">Review</a></p>
     </footer>
-    {{/if}}
 </article>
 {{/each}}
