--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -6,35 +6,27 @@
          <h1 class="header--title">My Books</h1> <span>{{toggle-widget}}</span>
     </header>
 
-    <nav class="navbar">
-        <ul class="navbar--list" role="navigation">
-            <li class="navbar--item">
-                <a href="#" tabindex="1">El Pooch</a>
-            </li>
-            <li class="navbar--item" tabindex="1">
-                <a href="#">The flight</a>
-            </li>
-            <li class="navbar--item" tabindex="1">
-                <a href="#">Top 10 Australian beaches</a>
-            </li>
-        </ul>
-    </nav>
+    <!-- insert navigation -->
+    {{navbar-widget}}
 
     <div id="main" class="backdrop backdrop_smallOnly" role="main">
         <span></span>
         <div class="row">
 
+            <!-- display column | Book article listing -->
             <section class="column">
 
                 <article class="article article_welcome clearfix">
-                    <div class="article--body">
+                    <div class="article--body clearfix">
                         <h2 class="article--title">Welcome back!</h2>
                         <p>Have you read any new books?</p>
                     </div>
                     <footer class="article--footer">
+                        <!-- insert add a book widget -->
                         {{book-widget books=model.books}}
                     </footer>
                 </article>
+
                 <!-- Display stored books -->
                 {{book-item books=model.books class=true}}
 
@@ -44,7 +36,6 @@
                 <!-- Display featured articles -->
                 {{featured-items featured=model.featured feature=true}}
             </section>
-
 
         </div>
 
