--- a/app/templates/components/book-widget.hbs
+++ b/app/templates/components/book-widget.hbs
@@ -1,9 +1,9 @@
 <!-- Action buttons -->
 <p>
     <!-- Hide the book form -->
-    <button {{action "formHide"}} class="link link_inlineBlock">No</button>
+    <button {{action "formHide"}} class="link link_inlineBlock text--uppercase">No</button>
     <!-- Show the book form -->
-    <button {{action "formShow"}} class="link link_primary link_inlineBlock">Yes</button>
+    <button {{action "formShow"}} class="link link_primary link_inlineBlock text--uppercase">Yes</button>
 </p>
 
 <!-- Check if add a new book form has been displayed -->
