--- a/app/templates/components/add-book.hbs
+++ b/app/templates/components/add-book.hbs
@@ -3,7 +3,7 @@
 <form class="form" {{action "submit" on="submit"}}>
     <!-- form header -->
     <header class="form--header">
-        <h2 class="form--title">Save book for later</h2>
+        <h2 class="form--title text--title">Save book for later</h2>
     </header>
     <!-- Form row for book name -->
     <div class="form--row">
@@ -28,4 +28,3 @@
         </div>
     </div>
 </form>
-
