--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -18,7 +18,7 @@
 
                 <article class="article article_welcome clearfix">
                     <div class="article--body clearfix">
-                        <h2 class="article--title">Welcome back!</h2>
+                        <h2 class="article--title text--title">Welcome back!</h2>
                         <p>Have you read any new books?</p>
                     </div>
                     <footer class="article--footer">
