--- a/app/templates/components/book-item.hbs
+++ b/app/templates/components/book-item.hbs
@@ -6,7 +6,7 @@
     </figure>
     <!-- body -->
     <div class="article--body">
-        <h2 class="article--title">{{ book.title }}</h2>
+        <h2 class="article--title text_title">{{ book.title }}</h2>
         <p class="text--secondary">{{ book.author }}</p>
     </div>
     <!-- footer -->
